# tex-helper

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  readme.md
doc/: readme.md
doc/latex_grammar/: 1_overview.md
doc/markdown2latex/: 1_overview.md
plan/: TODO.md
src/: cli.rs  config.rs  main.rs  utils.rs
src/cli/: compile.rs  format.rs  init.rs  mod.rs
src/cli/init/: default_assets.rs  mod.rs
src/latex_interpreter/: ast.rs  error.rs  formatter.rs  mod.rs  parser.rs  scanner.rs  token.rs
src/markdown_interpreter/: scanner.rs
test/: main.tex  preamble.tex  preamble.tex.formatted.tex
