[package]
authors = ["Yuhao Han"]
name = "tex-helper"
version = "0.1.0"
edition = "2021"
description = "A tex helper"
licencse= "GPL-2.0-or-later"
keywords = ["latex", "tex"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.2.0"
lazy_static = "1.5.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
